*** empty log message ***

--- a/po/ro.po
+++ b/po/ro.po
@@ -1,18 +1,20 @@
+# translation of yelp.gnome-2-4.ro.po to 
 # Romanian translation for yelp-1.0.1
-# Copyright (C) 2002 Free Software Foundation, Inc.
+# Copyright (C) 2002,2003 Free Software Foundation, Inc.
 # Mugurel Tudor <mugurelu@go.ro>, 2002-2003.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: 1.0.1\n"
-"POT-Creation-Date: 2003-09-01 16:45-0500\n"
-"PO-Revision-Date: 2003-01-20 23:09+0200\n"
+"Project-Id-Version: yelp.gnome-2-4.ro\n"
+"Report-Msgid-Bugs-To: \n"
+"POT-Creation-Date: 2003-09-02 12:57+0200\n"
+"PO-Revision-Date: 2003-09-02 14:31+0300\n"
 "Last-Translator: Mugurel Tudor <mugurelu@go.ro>\n"
-"Language-Team: română <ro@li.org>\n"
+"Language-Team:  <@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: KBabel 0.9.6\n"
+"X-Generator: KBabel 1.0.1\n"
 
 #: data/ui/yelp.glade.h:1
 msgid "*"
@@ -56,7 +58,7 @@ msgstr "Factory Yelp"
 
 #: src/yelp-main.c:94
 msgid "Define which cache directory to use"
-msgstr ""
+msgstr "Defineşte directorul de cache care va fi folosit"
 
 #: src/yelp-main.c:128
 #, c-format
@@ -261,9 +263,8 @@ msgid "translator_credits"
 msgstr "Mugurel Tudor <mugurelu@go.ro>"
 
 #: src/yelp-window.c:698
-#, fuzzy
 msgid "A Help Browser for GNOME"
-msgstr "Navigator în documentaţii pentru GNOME 2.0"
+msgstr "Un navigator pentru ajutorul GNOME"
 
 #: src/yelp-window.c:812
 msgid "Back"
@@ -304,3 +305,4 @@ msgstr "Primeşte ajutor despre GNOME"
 #: yelp.desktop.in.h:2
 msgid "Help"
 msgstr "Ajutor"
+
