--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2003-09-03  Mugurel Tudor  <mugurelu@go.ro>
+
+	* ro.po: Updated  Romanian translation
+
 2003-09-03  Changwoo Ryu  <cwryu@debian.org>
 
 	* ko.po: Updated Korean translation.
