--- a/stylesheets/ChangeLog
+++ b/stylesheets/ChangeLog
@@ -1,3 +1,7 @@
+2003-09-03  Danilo Šegan  <dsegan@gmx.net>
+
+	* l10n.xml: Added Serbian translation.
+
 2003-08-31  Shaun McCance  <shaunm@wolfram.com>
 
 	* yelp-customization.xsl:
