- Updated Italian translation from Luca Ferretti
* stylesheets/l10n.xml:
- Updated Italian translation from Luca Ferretti

--- a/stylesheets/ChangeLog
+++ b/stylesheets/ChangeLog
@@ -1,3 +1,8 @@
+2003-09-04  Shaun McCance  <shaunm@wolfram.com>
+
+	* l10n.xml:
+	- Updated Italian translation from Luca Ferretti
+
 2003-09-03  Danilo Šegan  <dsegan@gmx.net>
 
 	* l10n.xml: Added Serbian translation.
