--- a/stylesheets/ChangeLog
+++ b/stylesheets/ChangeLog
@@ -1,3 +1,8 @@
+2003-09-05  Danilo Šegan  <dsegan@gmx.net>
+
+	* l10n.xml: Added Previous, Next, Contents translation for
+	Serbian.
+
 2003-09-04  Shaun McCance  <shaunm@wolfram.com>
 
 	* l10n.xml:
