Added self to About dialog
* src/yelp-window.c: Added self to About dialog

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2003-09-08  Shaun McCance  <shaunm@gnome.org>
+
+	* src/yelp-window.c: Added self to About
+
 2003-08-27  Shaun McCance  <shaunm@wolfram.com>
 
 	* src/yelp-main.c
