- Wrap TOC in <dl>
* stylesheets/yelp-customization.xsl:
- Wrap TOC in <dl>

--- a/stylesheets/ChangeLog
+++ b/stylesheets/ChangeLog
@@ -1,3 +1,8 @@
+2003-09-08  Shaun McCance  <shaunm@gnome.org>
+
+	* yelp-customization.xsl:
+	- Wrapped TOC in <dl>
+
 2003-09-05  Danilo Šegan  <dsegan@gmx.net>
 
 	* l10n.xml: Added Previous, Next, Contents translation for
