--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,12 @@
+Changes in 2.4.0:
+-----------------
+* Don't forkbomb when DISPLAY is set		(Alexander Larsson)
+* Updated translations:
+  it (Luca Ferretti)
+  ko (Changwoo Ruy)
+  ro (Mugurel Tudor)
+  sr (Danilo Å egan)
+
 Changes in 2.3.90:
 ------------------
 * Updated README				(Shaun McCance)
@@ -114,7 +123,7 @@ Changes in 2.1.2:
 
 * Search in page                                (Richard Hult)
 * Fixes to yelp-pregenerate                     (Richard Hult)
-* Updated Norwegian (bokmål) translation        (Kjartan Maraas)
+* Updated Norwegian (bokmÃ¥l) translation        (Kjartan Maraas)
 
 Changes in 2.1.1:
 -----------------
@@ -236,7 +245,7 @@ Changes in 0.8:
 * Added support for gtkhtml1                     (Mikael Hallendal)
 * Plugged lots of mem leaks                      (Mikael Hallendal)
 * Fixed the nasty bug that made it crash on      (Mikael Hallendal,
-  Debian unstable.                                Stéphane Démurget)
+  Debian unstable.                                StÃ©phane DÃ©murget)
 * Various bugfixes                               (Mikael Hallendal)
 * Stylesheets improvments                        (Sander Vesik)
 
