--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2003-09-08  Shaun McCance  <shaunm@gnome.org>
+
+	* configure.in: Version 2.4.0
+	* src/yelp-window.c: Added self to About
+
 2003-09-03  Shaun McCance  <shaunm@wolfram.com>
 
 	* src/yelp-main.c:
