Update the Serbian translation (better soon than late).
2003-09-24  Danilo Šegan  <dsegan@gmx.net>

	* sr.po, sr@Latn.po: Update the Serbian translation (better soon
	than late).

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2003-09-24  Danilo Šegan  <dsegan@gmx.net>
+
+	* sr.po, sr@Latn.po: Update the Serbian translation (better soon
+	than late).
+
 2003-09-04  Joël Brich  <joel.brich@laposte.net>
 
 	* eo.po: Updated Esperanto translation.
