--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -4,15 +4,15 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: 2.0\n"
-"POT-Creation-Date: 2003-09-08 22:19-0500\n"
-"PO-Revision-Date: 2003-07-06 22:22-0300\n"
+"Project-Id-Version: yelp 2.0\n"
+"POT-Creation-Date: 2003-10-01 14:14-0400\n"
+"PO-Revision-Date: 2003-10-01 14:14-0400\n"
 "Last-Translator: Evandro Fernandes Giovanini <evandrofg@ig.com.br>\n"
-"Language-Team: GNOME-BR <gnome-l10n-br@listas.cipsga.org.br>, Brazilian "
-"Portuguese <ldp-br@bazar.conectiva.com.br>\n"
+"Language-Team: Brazilian Portuguese <gnome-l10n-br@listas.cipsga.org.br>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Report-Msgid-Bugs-To: \n"
 
 #: data/ui/yelp.glade.h:1
 msgid "*"
@@ -36,11 +36,11 @@ msgstr "Encontrar palavra int_eira"
 
 #: data/ui/yelp.glade.h:6
 msgid "_Match upper/lower case"
-msgstr "Levar mínusculas/maísculas e_m conta"
+msgstr "Considerar _mínusculas/maísculas"
 
 #: data/ui/yelp.glade.h:7
 msgid "_Next"
-msgstr "Pró_ximo"
+msgstr "_Seguinte"
 
 #: data/ui/yelp.glade.h:8
 msgid "_Previous"
