--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2003-10-01  Gustavo Maciel Dias Vieira  <gdvieira@zaz.com.br>
+
+	* pt_BR.po: Applied revision by Augusta Marques da Silva
+	<augusta.marques@gmx.net>.
+
 2003-09-24  Danilo Šegan  <dsegan@gmx.net>
 
 	* sr.po, sr@Latn.po: Update the Serbian translation (better soon
