--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2003-10-06  Žygimantas Beručka  <uid0@tuxfamily.org>
+
+	* lt.po: Added Lithuanian translation by Tomas Kuliavas
+	<tokul@users.sourceforge.net>.
+
 2003-10-01  Gustavo Maciel Dias Vieira  <gdvieira@zaz.com.br>
 
 	* pt_BR.po: Applied revision by Augusta Marques da Silva
