--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2003-10-06  Žygimantas Beručka  <uid0@tuxfamily.org>
+
+	* configure.in: Added "lt" to ALL_LINGUAS
+
 2003-09-08  Shaun McCance  <shaunm@gnome.org>
 
 	* configure.in: Version 2.4.0
