--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2003-10-06  Christian Rose  <menthos@menthos.com>
+
+	* configure.in: Added "mr" to ALL_LINGUAS.
+
 2003-10-06  Žygimantas Beručka  <uid0@tuxfamily.org>
 
 	* configure.in: Added "lt" to ALL_LINGUAS
