--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2003-10-06  Christian Rose  <menthos@menthos.com>
+
+	* mr.po: Added Marathi translation by
+	Jitendra Shah <jitendras@vsnl.com>.
+
 2003-10-06  Žygimantas Beručka  <uid0@tuxfamily.org>
 
 	* lt.po: Added Lithuanian translation by Tomas Kuliavas
