--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,15 @@
+2003-10-12  Shaun McCance  <shaunm@gnome.org>
+
+	* src/yelp-cache.c:
+	* src/yelp-cache.h:
+	* src/yelp-db2html.c:
+	* src/yelp-reader.c:
+	* src/yelp-scrollkeeper.c:
+	* src/yelp-view-content.c:
+	- Revert change for making navbars in C.  Should not be necessary
+	  with new stylesheets.
+	- Use new stylesheets
+
 2003-10-06  Christian Rose  <menthos@menthos.com>
 
 	* configure.in: Added "mr" to ALL_LINGUAS.
