--- a/stylesheets/ChangeLog
+++ b/stylesheets/ChangeLog
@@ -1,3 +1,13 @@
+2003-10-12  Shaun McCance  <shaunm@gnome.org>
+
+	* db2html*.xsl:
+	* yelp-customization.xsl:
+	- Uber-fast new stylesheets
+
+	* Makefile.am:
+	* docbook/Makefile.am:
+	- Use new stylesheets
+
 2003-09-08  Shaun McCance  <shaunm@gnome.org>
 
 	* yelp-customization.xsl:
