--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,12 @@
+Changes in 2.4.1:
+-----------------
+* Updated translations:
+  mr	(Jitendra Shah)
+  lt	(Tomas Kuliavas)
+  pt_BR	(Augusta Marques da Silva)
+  vi	(Pablo Saratxaga)
+  ro	(Mugurel Tudor)
+
 Changes in 2.4.0:
 -----------------
 * Don't forkbomb when DISPLAY is set		(Alexander Larsson)
