--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2003-09-01  Shaun McCance  <shaunm@gnome.org>
+
+	* configure.in: Version 2.4.1
+
 2003-10-06  Christian Rose  <menthos@menthos.com>
 
 	* configure.in: Added "mr" to ALL_LINGUAS.
