--- a/po/lt.po
+++ b/po/lt.po
@@ -6,14 +6,14 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: yelp\n"
-"Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2003-10-06 15:05+0300\n"
+"POT-Creation-Date: 2003-09-08 22:19-0500\n"
 "PO-Revision-Date: 2003-10-06 14:28+0300\n"
 "Last-Translator: Tomas Kuliavas <tokul@users.sourceforge.net>\n"
 "Language-Team: Lithuanian <komp_lt@konferencijos.lt>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Report-Msgid-Bugs-To: \n"
 
 #: data/ui/yelp.glade.h:1
 msgid "*"
