--- a/po/vi.po
+++ b/po/vi.po
@@ -5,14 +5,14 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: yelp 0.6.99\n"
-"Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2003-09-28 12:49+0200\n"
+"POT-Creation-Date: 2003-09-08 22:19-0500\n"
 "PO-Revision-Date: 2003-10-02 10:25+0700\n"
 "Last-Translator: pclouds <pclouds@gmx.net>\n"
 "Language-Team: GnomeVI <gnomevi-list@lists.sourceforge.net>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Report-Msgid-Bugs-To: \n"
 
 #: data/ui/yelp.glade.h:1
 msgid "*"
