--- a/po/kn.po
+++ b/po/kn.po
@@ -6,9 +6,9 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Yelp.Gnome.Core-2.1\n"
-"POT-Creation-Date: 2003-09-08 22:19-0500\n"
-"PO-Revision-Date: 2002-12-27 17:17+0530\n"
-"Last-Translator: Pramod <rpramod@postmaster.co.uk>\n"
+"POT-Creation-Date: 2003-10-12 03:00+0200\n"
+"PO-Revision-Date: 2002-05-29 20:45+0530\n"
+"Last-Translator: Pramod.R <rpramod@postmasterr.co.uk>\n"
 "Language-Team: Kannada <LL@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
@@ -16,11 +16,11 @@ msgstr ""
 
 #: data/ui/yelp.glade.h:1
 msgid "*"
-msgstr ""
+msgstr "*"
 
 #: data/ui/yelp.glade.h:2
 msgid "<b>Find text in the document:</b>"
-msgstr ""
+msgstr "<b>ದಸ್ತವೇಜಿನಲ್ಲಿ ಪಠ್ಯವನ್ನು ಹುಡುಕು:</b>"
 
 #: data/ui/yelp.glade.h:3
 msgid "Automatically _wrap around"
@@ -28,7 +28,7 @@ msgstr ""
 
 #: data/ui/yelp.glade.h:4
 msgid "Find text..."
-msgstr ""
+msgstr "ಪಠ್ಯವನ್ನು ಹುಡುಕು"
 
 #: data/ui/yelp.glade.h:5
 msgid "Match _entire word"
@@ -40,11 +40,11 @@ msgstr ""
 
 #: data/ui/yelp.glade.h:7
 msgid "_Next"
-msgstr ""
+msgstr "ಮುಂದೆ"
 
 #: data/ui/yelp.glade.h:8
 msgid "_Previous"
-msgstr ""
+msgstr "ಹಿಂದಿನ"
 
 #: src/GNOME_Yelp.server.in.h:1
 msgid "Yelp"
@@ -67,18 +67,25 @@ msgstr "ಯೆಲ್ಪ್ ಶುರುಮಾಡಲು ಅಗಲಿಲ್ಲ: '%
 msgid "Could not open new window."
 msgstr "ಹೊಸ ಕಿಟಕಿಯನ್ನು ತೆಗೆಯಲು ಅಗಲಿಲ್ಲ"
 
-#: src/yelp-man.c:296 src/yelp-man.c:317 src/yelp-man.c:353 src/yelp-man.c:385
-#: src/yelp-man.c:401 src/yelp-man.c:412
+#: src/yelp-man.c:296
+#: src/yelp-man.c:317
+#: src/yelp-man.c:353
+#: src/yelp-man.c:385
+#: src/yelp-man.c:401
+#: src/yelp-man.c:412
 msgid "X11"
 msgstr "ಎಕ್ಸ್-11"
 
-#: src/yelp-man.c:301 src/yelp-man.c:332 src/yelp-man.c:390 src/yelp-man.c:417
+#: src/yelp-man.c:301
+#: src/yelp-man.c:332
+#: src/yelp-man.c:390
+#: src/yelp-man.c:417
 msgid "OpenSSL"
-msgstr ""
+msgstr "ಒಪನ್ ಎಸ್.ಎಸ್.ಎಲ್."
 
 #: src/yelp-man.c:306
 msgid "Termcap"
-msgstr ""
+msgstr "ಟೆರ್ಮಕ್ಯಾಪ್"
 
 #: src/yelp-man.c:322
 msgid "Perl"
@@ -94,19 +101,19 @@ msgstr "ಟಿ.ಐ.ಎಫ್.ಎಫ್."
 
 #: src/yelp-man.c:342
 msgid "PThreads"
-msgstr ""
+msgstr "ಪಿತ್ರೇಡ್ಸ್"
 
 #: src/yelp-man.c:364
 msgid "System Calls"
-msgstr ""
+msgstr "ಸಿಸ್ಟೆಮ್ ಕಾಲ್ಸ್"
 
 #: src/yelp-man.c:369
 msgid "Library Functions"
-msgstr ""
+msgstr "ಲೈಬ್ರರಿ ಫಂಕ್ಷಣ್ಸ್"
 
 #: src/yelp-man.c:374
 msgid "Kernel Routines"
-msgstr ""
+msgstr "ಕೆರ್ಣಲ್ ರೂಟಿನ್ಸ್"
 
 #: src/yelp-man.c:429
 msgid "Applications"
@@ -136,11 +143,13 @@ msgstr ""
 msgid "System Administration"
 msgstr ""
 
-#: src/yelp-view-content.c:487 src/yelp-view-index.c:423
+#: src/yelp-view-content.c:487
+#: src/yelp-view-index.c:423
 msgid "Loading..."
 msgstr "ಓದುತ್ತಿದೆ..."
 
-#: src/yelp-view-content.c:528 src/yelp-view-index.c:517
+#: src/yelp-view-content.c:528
+#: src/yelp-view-index.c:517
 msgid "Section"
 msgstr "ವಿಭಾಗ"
 
@@ -151,47 +160,53 @@ msgstr "ಹುಡುಕು:"
 #. GList           *seriesids;
 #: src/yelp-view-toc.c:165
 msgid "Help Contents"
-msgstr ""
+msgstr "ಸಹಾಯ ಪುಟಗಳು"
 
 #: src/yelp-view-toc.c:166
 msgid "GNOME - Desktop"
-msgstr ""
+msgstr "ಘನೋಮ್  - ಗಣಕ ಪರಿಸರ"
 
 #: src/yelp-view-toc.c:167
 msgid "Additional documents"
-msgstr ""
+msgstr "ಹೆಚ್ಚಿನ ದಸ್ತವೇಜುಗಳು"
 
-#: src/yelp-view-toc.c:168 src/yelp-view-toc.c:492
+#: src/yelp-view-toc.c:168
+#: src/yelp-view-toc.c:492
 msgid "Manual Pages"
-msgstr ""
+msgstr "ಮಾಹಿತಿ ಪುಟಗಳು"
 
-#: src/yelp-view-toc.c:169 src/yelp-view-toc.c:548
+#: src/yelp-view-toc.c:169
+#: src/yelp-view-toc.c:548
 msgid "Info Pages"
 msgstr "ಮಾಹಿತಿ ಪುಟಗಳು"
 
-#: src/yelp-view-toc.c:366 src/yelp-view-toc.c:549 src/yelp-view-toc.c:740
+#: src/yelp-view-toc.c:366
+#: src/yelp-view-toc.c:549
+#: src/yelp-view-toc.c:740
 msgid "Documents"
 msgstr "ದಸ್ತಾವೇಜುಗಳು"
 
-#: src/yelp-view-toc.c:367 src/yelp-view-toc.c:493 src/yelp-view-toc.c:741
+#: src/yelp-view-toc.c:367
+#: src/yelp-view-toc.c:493
+#: src/yelp-view-toc.c:741
 msgid "Categories"
 msgstr "ವಿಭಾಗಗಳು"
 
 #: src/yelp-view-toc.c:447
 msgid "Manual pages"
-msgstr ""
+msgstr "ಮಾಹಿತಿ ಪುಟಗಳು"
 
 #: src/yelp-view-toc.c:707
 msgid "GNOME is"
-msgstr ""
+msgstr "ಘನೋಮ್ ಒಂದು"
 
 #: src/yelp-view-toc.c:708
 msgid "Free Software"
-msgstr ""
+msgstr "ಮುಕ್ತ ತಂತ್ರಾಂಶ"
 
 #: src/yelp-view-toc.c:709
 msgid "(C)"
-msgstr ""
+msgstr "©"
 
 #: src/yelp-window.c:171
 msgid "/_File"
@@ -235,7 +250,7 @@ msgstr "/ಹೊಗು/ಪ್ರಾರಂಭಿಕ ಪುಟ"
 
 #: src/yelp-window.c:183
 msgid "/Go/_Index"
-msgstr ""
+msgstr "/ಹೊಗು/ಸೂಚಿ"
 
 #: src/yelp-window.c:185
 msgid "/_Help"
@@ -245,25 +260,25 @@ msgstr "/ಸಹಾಯ "
 msgid "/Help/_About"
 msgstr "/ಸಹಾಯ/ತಂತ್ರಾಂಶದ ಬಗ್ಗೆ "
 
-#: src/yelp-window.c:255 src/yelp-window.c:455
+#: src/yelp-window.c:255
+#: src/yelp-window.c:455
 msgid "Help Browser"
 msgstr "ಸಹಾಯ ವೀಕ್ಷಕ"
 
 #: src/yelp-window.c:368
 #, c-format
 msgid "The document '%s' does not exist"
-msgstr ""
+msgstr "'%s'  ದಸ್ತಾವೇಜು ಸಿಗಲ್ಲಿಲ್ಲ"
 
 #. Note to translators: put here your name (and address) so it
 #. * will shop up in the "about" box
 #: src/yelp-window.c:695
 msgid "translator_credits"
-msgstr "ಅನುವಾದಕರು - ಪ್ರಮೋದ್.ಆರ್"
+msgstr "ಪ್ರಮೋದ್.ಆರ್"
 
 #: src/yelp-window.c:699
-#, fuzzy
 msgid "A Help Browser for GNOME"
-msgstr "ಸಹಾಯ ವೀಕ್ಷಕ"
+msgstr "ಘನೋಮ್ ಸಹಾಯ ವೀಕ್ಷಕ"
 
 #: src/yelp-window.c:813
 msgid "Back"
@@ -271,7 +286,7 @@ msgstr "ಹಿಂದೆ"
 
 #: src/yelp-window.c:814
 msgid "Show previous page in history"
-msgstr ""
+msgstr "ಚರಿತ್ರೆಯಲ್ಲಿನ ಹಿಂದಿನ ಪುಟವನ್ನು ತೋರಿಸು"
 
 #: src/yelp-window.c:825
 msgid "Forward"
@@ -279,7 +294,7 @@ msgstr "ಮುಂದೆ"
 
 #: src/yelp-window.c:826
 msgid "Show next page in history"
-msgstr ""
+msgstr "ಚರಿತ್ರೆಯಲ್ಲಿನ ಮುಂದಿನ ಪುಟವನ್ನು ತೋರಿಸು"
 
 #: src/yelp-window.c:839
 msgid "Home"
@@ -291,11 +306,11 @@ msgstr "ಪ್ರಾರಂಭಿಕ ಪುಟಕ್ಕೆ ಹೋಗು"
 
 #: src/yelp-window.c:850
 msgid "Index"
-msgstr ""
+msgstr "ಸೂಚಿ"
 
 #: src/yelp-window.c:851
 msgid "Search in the index"
-msgstr ""
+msgstr "ಸೂಚಿಯಲ್ಲಿ ಹುಡುಕು"
 
 #: yelp.desktop.in.h:1
 msgid "Get help with GNOME"
@@ -304,3 +319,4 @@ msgstr "ಘನೋಮಿನ ಬಗ್ಗೆ ಸಹಾಯ ಪಡೆ"
 #: yelp.desktop.in.h:2
 msgid "Help"
 msgstr "ಸಹಾಯ"
+
