- Fix copyright so it works
* db2html-titlepage.xsl:
- Fix copyright so it works

--- a/stylesheets/ChangeLog
+++ b/stylesheets/ChangeLog
@@ -1,5 +1,10 @@
 2003-10-16  Shaun McCance  <shaunm@gnome.org>
 
+	* db2html-titlepage.xsl:
+	- Fix copyright so it works
+
+2003-10-16  Shaun McCance  <shaunm@gnome.org>
+
 	* db2html-html.xsl:
 	* yelp-customization.xsl:
 	- Actually use html.navbar.*, passing in links as params
