- Fix links to titlepage
* db2html-chunk.xsl:
* db2html-xref.xsl:
- Fix links to titlepage

--- a/stylesheets/ChangeLog
+++ b/stylesheets/ChangeLog
@@ -1,5 +1,11 @@
 2003-10-16  Shaun McCance  <shaunm@gnome.org>
 
+	* db2html-chunk.xsl:
+	* db2html-xref.xsl:
+	- Fix links to titlepage
+
+2003-10-16  Shaun McCance  <shaunm@gnome.org>
+
 	* db2html-titlepage.xsl:
 	- Fix copyright so it works
 
