--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2003-10-19  Peteris Krisjanis <peteris.krisjanis@os.lv>
+
+	* lv.po: Updated Latvian translation.
+
 2003-10-16  Yogeesh MB  <yogeeshappa.mathighatta@wipro.com>
 
         * kn.po: Updated Kannada translation by
