2003-10-19  Peteris Krisjanis * Updated Latvian translation.

--- a/po/lv.po
+++ b/po/lv.po
@@ -1,17 +1,20 @@
-# SOME DESCRIPTIVE TITLE.
-# Copyright (C) YEAR Free Software Foundation, Inc.
-# Peteris Krisjanis <peteris.krisjanis@ttc.lv>, 2002
+# translation of yelp.gnome-2-4.po to Latvian
+# Copyright (C) 2003 Free Software Foundation, Inc.
+# Peteris Krisjanis <peteris.krisjanis@ttc.lv>, 2002.
+# Peteris Krisjanis <peteris.krisjanis@os.lv>, 2003.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: yelp 0.5.99\n"
-"POT-Creation-Date: 2003-09-08 22:19-0500\n"
-"PO-Revision-Date: 2002-12-20 22:39+0200\n"
-"Last-Translator: Artis Trops <hornet@navigators.lv>\n"
-"Language-Team: Latvian <ll10nt@inbox.lv>\n"
+"Project-Id-Version: yelp.gnome-2-4\n"
+"Report-Msgid-Bugs-To: \n"
+"POT-Creation-Date: 2003-10-17 19:03+0200\n"
+"PO-Revision-Date: 2003-10-18 01:25+0300\n"
+"Last-Translator: Peteris Krisjanis <peteris.krisjanis@os.lv>\n"
+"Language-Team: Latvian <locale@laka.lv>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"X-Generator: KBabel 1.0.2\n"
 
 #: data/ui/yelp.glade.h:1
 msgid "*"
@@ -55,7 +58,7 @@ msgstr "Yelp Ražotne"
 
 #: src/yelp-main.c:94
 msgid "Define which cache directory to use"
-msgstr ""
+msgstr "Definējiet, kuru keiša direktoriju izmantot"
 
 #: src/yelp-main.c:128
 #, c-format
@@ -262,9 +265,8 @@ msgstr ""
 "Peteris Krisjanis <peteris.krisjanis@os.lv>"
 
 #: src/yelp-window.c:699
-#, fuzzy
 msgid "A Help Browser for GNOME"
-msgstr "GNOME 2.0 Palīdzības Pārlūks"
+msgstr "GNOME Palīdzības Pārlūks"
 
 #: src/yelp-window.c:813
 msgid "Back"
@@ -305,3 +307,4 @@ msgstr "Saņemt palīdzību ar GNOME"
 #: yelp.desktop.in.h:2
 msgid "Help"
 msgstr "Palīdzība"
+
