- Use $depth_chunk instead of $depth
* stylesheets/db2html-division.xsl:
- Use $depth_chunk instead of $depth

--- a/stylesheets/ChangeLog
+++ b/stylesheets/ChangeLog
@@ -1,3 +1,8 @@
+2003-10-12  Shaun McCance  <shaunm@gnome.org>
+
+	* db2html-division.xsl:
+	- Use $depth_chunk instead of $depth
+
 2003-10-22  Shaun McCance  <shaunm@gnome.org>
 
 	* Makefile.am:
