--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2003-10-24   Vincent van Adrighem  <adrighem@gnome.org>
+
+	* nl.po: Dutch translation updated by Tino Meinen.
+
 2003-10-06  Christian Rose  <menthos@menthos.com>
 
 	* mr.po: Added Marathi translation by
