Updated Hindi translation

--- a/po/hi.po
+++ b/po/hi.po
@@ -5,8 +5,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Yelp 2.4 \n"
-"POT-Creation-Date: 2003-09-08 22:19-0500\n"
-"PO-Revision-Date: 2003-01-10 20:38+0530\n"
+"POT-Creation-Date: 2003-10-29 21:04+0530\n"
+"PO-Revision-Date: 2003-10-29 21:10+0530\n"
 "Last-Translator: Bhopal team <anuragseetha@yahoo.com>\n"
 "Language-Team: Gnome Hindi Team <indlinux-hindi-gnome@lists.sourceforge."
 "net>\n"
@@ -111,7 +111,7 @@ msgstr "कर्नल"
 
 #: src/yelp-man.c:429
 msgid "Applications"
-msgstr "एप्लीकेशन"
+msgstr "अनुप्रयोग"
 
 #: src/yelp-man.c:434
 msgid "Development"
@@ -156,7 +156,7 @@ msgstr "सहायता के घटक"
 
 #: src/yelp-view-toc.c:166
 msgid "GNOME - Desktop"
-msgstr "गनोम डेस्कटाप"
+msgstr "गनोम डेस्कटॉप"
 
 #: src/yelp-view-toc.c:167
 msgid "Additional documents"
@@ -188,7 +188,7 @@ msgstr "गनोम है"
 
 #: src/yelp-view-toc.c:708
 msgid "Free Software"
-msgstr "स्वतंत्र सोफटवेर"
+msgstr "स्वतंत्र सॉफटवेर"
 
 #: src/yelp-view-toc.c:709
 msgid "(C)"
@@ -253,13 +253,13 @@ msgstr "सहायता ब्राउजर"
 #: src/yelp-window.c:368
 #, c-format
 msgid "The document '%s' does not exist"
-msgstr "दस्तावेज '%s' नहीं हैे"
+msgstr "दस्तावेज '%s' नहीं है"
 
 #. Note to translators: put here your name (and address) so it
 #. * will shop up in the "about" box
 #: src/yelp-window.c:695
 msgid "translator_credits"
-msgstr "अनुवादकों को श्रेय  (_c)"
+msgstr "अनुराग सीठा\nजी करुणाकर <karunakar@freedomink.org>"
 
 #: src/yelp-window.c:699
 msgid "A Help Browser for GNOME"
