--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2003-10-29  Guntupalli Karunakar  <karunakar@freedomink.org>
+
+	* hi.po: Updated Hindi translation.
+
 2003-10-19  Peteris Krisjanis <peteris.krisjanis@os.lv>
 
 	* lv.po: Updated Latvian translation.
