- Added yelp:document in preparation for new transformation code.
* stylesheets/db2html-chunk.xsl:
- Added yelp:document in preparation for new transformation code.

--- a/stylesheets/ChangeLog
+++ b/stylesheets/ChangeLog
@@ -1,3 +1,8 @@
+2003-10-29  Shaun McCance  <shaunm@gnome.org>
+
+	* db2html-chunk.xsl:
+	- Added yelp:document in preparation for new transformation code.
+
 2003-10-23  Shaun McCance  <shaunm@gnome.org>
 
 	* db2html-header.xsl:
