--- a/stylesheets/ChangeLog
+++ b/stylesheets/ChangeLog
@@ -1,3 +1,8 @@
+2003-10-30  Shaun McCance  <shaunm@gnome.org>
+
+	* db2html-chunk.xsl:
+	- Small fixes to chunking code.
+
 2003-10-29  Shaun McCance  <shaunm@gnome.org>
 
 	* db2html-chunk.xsl:
