--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2003-10-30  Kostas Papadimas <pkst@gnome.org>
+
+	* el.po: Updated Greek translation.
+
 2003-10-24   Vincent van Adrighem  <adrighem@gnome.org>
 
 	* nl.po: Dutch translation updated by Tino Meinen.
