--- a/po/ko.po
+++ b/po/ko.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: yelp 2.1.3\n"
 "POT-Creation-Date: 2003-09-08 22:19-0500\n"
-"PO-Revision-Date: 2003-08-24 03:44+0900\n"
+"PO-Revision-Date: 2003-11-03 05:11+0900\n"
 "Last-Translator: Young-Ho, Cha <ganadist@mizi.com>\n"
 "Language-Team: GTP Korean <gnome-kr-translation@gnome.or.kr>\n"
 "MIME-Version: 1.0\n"
@@ -20,7 +20,7 @@ msgstr "*"
 
 #: data/ui/yelp.glade.h:2
 msgid "<b>Find text in the document:</b>"
-msgstr "<b>문서에서 글자 찾기:</b>"
+msgstr "<b>문서에서 텍스트 찾기:</b>"
 
 #: data/ui/yelp.glade.h:3
 msgid "Automatically _wrap around"
@@ -28,7 +28,7 @@ msgstr "자동 줄 넘김(_W)"
 
 #: data/ui/yelp.glade.h:4
 msgid "Find text..."
-msgstr "글자 찾기..."
+msgstr "텍스트 찾기..."
 
 #: data/ui/yelp.glade.h:5
 msgid "Match _entire word"
@@ -219,23 +219,23 @@ msgstr "/편집/다시 찾기(_F)"
 
 #: src/yelp-window.c:179
 msgid "/_Go"
-msgstr "/가기(_G)"
+msgstr "/이동(_G)"
 
 #: src/yelp-window.c:180
 msgid "/Go/_Back"
-msgstr "/가기/뒤로(_B)"
+msgstr "/이동/뒤로(_B)"
 
 #: src/yelp-window.c:181
 msgid "/Go/_Forward"
-msgstr "/가기/앞으로(_F)"
+msgstr "/이동/앞으로(_F)"
 
 #: src/yelp-window.c:182
 msgid "/Go/_Home"
-msgstr "/가기/홈(_H)"
+msgstr "/이동/홈(_H)"
 
 #: src/yelp-window.c:183
 msgid "/Go/_Index"
-msgstr "/가기/색인(_I)"
+msgstr "/이동/찾아보기(_I)"
 
 #: src/yelp-window.c:185
 msgid "/_Help"
@@ -286,15 +286,15 @@ msgstr "홈"
 
 #: src/yelp-window.c:840
 msgid "Go to home view"
-msgstr "홈 보기로 가기"
+msgstr "홈으로 이동"
 
 #: src/yelp-window.c:850
 msgid "Index"
-msgstr "색인"
+msgstr "찾아보기"
 
 #: src/yelp-window.c:851
 msgid "Search in the index"
-msgstr "색인에서 찾습니다"
+msgstr "찾아보기에서 찾습니다"
 
 #: yelp.desktop.in.h:1
 msgid "Get help with GNOME"
