--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2003-11-04  Nikos Charonitakis  <frolix68@yahoo.gr>
+
+	* el.po: Updated Greek translation.
+
 2003-11-03  Changwoo Ryu  <cwryu@debian.org>
 
 	* ko.po: Updated Korean translation.
