- New GObjectified URI code
* src/test-uri:
* src/yelp-uri.c:
* src/yelp-uri.h:
- New GObjectified URI code

* src/test-pager.c:
* src/yelp-db-pager.c:
* src/yelp-db-pager.h:
* src/yelp-pager.c:
* src/yelp-pager.h:
- New transformation code

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,17 @@
+2003-11-06  Shaun McCance  <shaunm@gnome.org>
+
+	* src/test-uri:
+	* src/yelp-uri.c:
+	* src/yelp-uri.h:
+	- New GObjectified URI code
+
+	* src/test-pager.c:
+	* src/yelp-db-pager.c:
+	* src/yelp-db-pager.h:
+	* src/yelp-pager.c:
+	* src/yelp-pager.h:
+	- New transformation code
+
 2003-10-12  Shaun McCance  <shaunm@gnome.org>
 
 	* src/yelp-cache.c:
