--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2003-11-06  Shaun McCance  <shaunm@gnome.org>
 
+	* src/yelp-uri.h:
+	- #include <glib-object.h>
+
+2003-11-06  Shaun McCance  <shaunm@gnome.org>
+
 	* src/Makefile.am:
 	- Changes for new URI and Pager code
 
