- Require libxml-2.0 2.6.0, because I do
* configure.in:
- Require libxml-2.0 2.6.0, because I do

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2003-11-06  Shaun McCance  <shaunm@gnome.org>
 
+	* configure.in:
+	- Require libxml-2.0 2.6.0, because I do
+
+2003-11-06  Shaun McCance  <shaunm@gnome.org>
+
 	* src/yelp-uri.h:
 	- #include <glib-object.h>
 
