--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,15 @@
+Changes in 2.4.2:
+-----------------
+* Fix problem and potential crash in info converter.
+  Patch submitted by both Joe Marcus Clarke and Roderich Schupp
+
+* Updated translations:
+  el    (Nikos Charonitakis)
+  ko    (Changwoo Ryu)
+  hi    (Guntupalli Karunakar)
+  lv    (Peteris Krisjanis)
+  kn    (Pramod)
+
 Changes in 2.4.1:
 -----------------
 * Updated translations:
