--- a/po/hi.po
+++ b/po/hi.po
@@ -5,7 +5,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Yelp 2.4 \n"
-"POT-Creation-Date: 2003-10-29 21:04+0530\n"
+"POT-Creation-Date: 2003-11-10 11:07-0600\n"
 "PO-Revision-Date: 2003-10-29 21:10+0530\n"
 "Last-Translator: Bhopal team <anuragseetha@yahoo.com>\n"
 "Language-Team: Gnome Hindi Team <indlinux-hindi-gnome@lists.sourceforge."
@@ -259,7 +259,9 @@ msgstr "दस्तावेज '%s' नहीं है"
 #. * will shop up in the "about" box
 #: src/yelp-window.c:695
 msgid "translator_credits"
-msgstr "अनुराग सीठा\nजी करुणाकर <karunakar@freedomink.org>"
+msgstr ""
+"अनुराग सीठा\n"
+"जी करुणाकर <karunakar@freedomink.org>"
 
 #: src/yelp-window.c:699
 msgid "A Help Browser for GNOME"
