--- a/po/lv.po
+++ b/po/lv.po
@@ -6,14 +6,14 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: yelp.gnome-2-4\n"
-"Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2003-10-17 19:03+0200\n"
+"POT-Creation-Date: 2003-11-10 11:07-0600\n"
 "PO-Revision-Date: 2003-10-18 01:25+0300\n"
 "Last-Translator: Peteris Krisjanis <peteris.krisjanis@os.lv>\n"
 "Language-Team: Latvian <locale@laka.lv>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Report-Msgid-Bugs-To: \n"
 "X-Generator: KBabel 1.0.2\n"
 
 #: data/ui/yelp.glade.h:1
@@ -307,4 +307,3 @@ msgstr "Saņemt palīdzību ar GNOME"
 #: yelp.desktop.in.h:2
 msgid "Help"
 msgstr "Palīdzība"
-
