- Breaking things more for the new transformations
* src/Makefile.am:
* src/yelp-base.c:
* src/yelp-history.c:
* src/yelp-window.c:
* src/yelp-window.h:
- Breaking things more for the new transformations

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2003-11-11  Shaun McCance  <shaunm@gnome.org>
+
+	* src/Makefile.am:
+	* src/yelp-base.c:
+	* src/yelp-history.c:
+	* src/yelp-window.c:
+	* src/yelp-window.h:
+	- Breaking things more for the new transformations
+
 2003-11-06  Shaun McCance  <shaunm@gnome.org>
 
 	* configure.in:
