--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2003-11-11 Hasbullah Bin Pit <sebol@ikhlas.com>
+
+        * ms.po: Updated Malay translation.
+
 2003-11-02  KAMAGASAKO Masatoshi  <emerald@gnome.gr.jp>
 
 	* ja.po: Updated Japanese translation.
@@ -156,7 +160,7 @@
 	* wa.po: Updated Walloon file
 
 2003-07-10 Hasbullah Bin Pit <sebol@ikhlas.com>
-                                                                                 
+
         * ms.po: Updated Malay translation.
 
 2003-07-08  Andras Timar  <timar@gnome.hu>
