--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,6 +1,10 @@
+2003-11-14  Kjartan Maraas  <kmaraas@gnome.org>
+
+	* no.po: Updated Norwegian translation.
+
 2003-11-11 Hasbullah Bin Pit <sebol@ikhlas.com>
 
-        * ms.po: Updated Malay translation.
+	* ms.po: Updated Malay translation.
 
 2003-11-02  KAMAGASAKO Masatoshi  <emerald@gnome.gr.jp>
 
