- Added resolve_xref_chunk parameter
* stylesheets/db2html-param.xsl:
* stylesheets/db2html-xref.xsl:
- Added resolve_xref_chunk parameter

--- a/stylesheets/ChangeLog
+++ b/stylesheets/ChangeLog
@@ -1,3 +1,9 @@
+2003-11-15  Shaun McCance  <shaunm@gnome.org>
+
+	* db2html-param.xsl:
+	* db2html-xref.xsl:
+	- Added resolve_xref_chunk parameter
+
 2003-10-30  Shaun McCance  <shaunm@gnome.org>
 
 	* db2html-chunk.xsl:
