--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,15 @@
+2003-11-16  Shaun McCance  <shaunm@gnome.org>
+
+	* src/Makefile.am:
+	* src/yelp-base.c:
+	* src/yelp-toc-pager.c:
+	* src/yelp-toc-pager.h:
+	- Adding YelpTocPager
+
+	* src/yelp-db-pager.c:
+	* src/yelp-db-pager.h:
+	- Whitespace changes
+
 2003-11-15  Shaun McCance  <shaunm@gnome.org>
 
 	* src/yelp-db-pager.c:
