--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2003-11-18  Shaun McCance  <shaunm@gnome.org>
 
+	* src/Makefile.am:
+	* src/yelp-reader.c:
+	* src/yelp-reader.h:
+	- Removing YelpReader
+
+2003-11-18  Shaun McCance  <shaunm@gnome.org>
+
 	* src/yelp-toc-pager.c:
 	- Only read files ending in .omf
 
