Updated French translation.

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2003-11-21  Christophe Merlet  <redfox@redfoxcenter.org>
+
+	* fr.po: Updated French translation from
+	Jean-Michel Ardantz <jmardantz@ifrance.com>.
+
 2003-11-20  Ole Laursen  <olau@hardworking.dk>
 
 	* da.po: Updated Danish translation.
