- Filled in just a little more to show how it works, so that I can get
* data/toc.xml.in:
- Filled in just a little more to show how it works, so that I can
  get somebody else to write this file for me.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2003-11-29  Shaun McCance  <shaunm@gnome.org>
 
+	* data/toc.xml.in:
+	- Filled in just a little more to show how it works, so that I can
+	  get somebody else to write this file for me.
+
+2003-11-29  Shaun McCance  <shaunm@gnome.org>
+
 	* src/yelp-window.c:
 	- Make the sidebar disappear for no-sidebar pages.
 
